themes/commons_origins/css/commons_origins-style.css
/* ... */
.shoutbox-msg .shout-message,
div.shoutbox-even {
	-moz-box-shadow: 1px 1px 3px #ddd;
	-webkit-box-shadow: 1px 1px 3px #ddd;
	border: 1px solid #d6d6d6;
	box-shadow: 1px 1px 3px #ddd;
	display: block;
	margin-left: 108px;
	min-height: 18px;
	padding: 10px;
	z-index: 1;
}

.shoutbox-msg.shoutbox-unpublished .shoutbox-post-info {
	background: transparent url(../images/shoutbox-bubble-unpublished.png) no-repeat right 10px;
}

.shoutbox-msg.shoutbox-unpublished {
	background-color: transparent;
}

.shoutbox-msg.shoutbox-unpublished .shout-message {
	border: 1px solid #c90707;
	color: #666;
}

div.shoutbox-even {
	margin: 0 4px 18px 0;
	padding: 2px 4px;
}

.shoutbox-all-shouts {
	border-top: 1px solid #ccc;
	font-size: 1em;
	font-weight: bold;
	margin: 0px 0 0 0;
	text-align: right;
}

/* Homebox module*/

#homebox-buttons {
  text-align: right;
}

.homebox-column:after {
	clear: both;
	content: ".";
	display: block;
	height: 0;
	visibility: hidden;
}

#homebox .homebox-column {
	background-color: #f9f9f9;
	background-image: none;
}

#homebox .homebox-portlet h3.portlet-header {
	background-color: #efefef;
	color: #323232;
	font-weight: normal;
	line-height: 1.5em;
	font-size: 1.1em;
	margin: 0px;
	padding: 3px 8px;
}

#homebox .homebox-portlet h2.portlet-header a {
	color: #323232;
}

#homebox .homebox-portlet .homebox-portlet-inner {
	border: 1px solid #dedede;
}

#homebox .homebox-portlet .homebox-portlet-inner .portlet-content {
	padding: 10px;
}

#homebox .homebox-portlet {
  float: none;
  width: auto;
}

#homebox-buttons button {
  font-family: inherit;
}

/* Temporary hack needed until homebox can handle hiding these */
body#pid-dashboard h1.title, body#pid-dashboard #breadcrumbs {
  display: none;
}

/* Group Info */

.group-attributes.fieldgroup .content {
	padding: 0;
}

.panel-pane .full-node .group-attributes .field-field-group-image img.imagecache-group_images {
	float: none;
	height: auto;
	text-align: left;
	width: 100%;
}

.og-mission p:first-child {
	font-weight: bold;
}
/*Group pages*/

.block#block-commons_core-group_create_content .inner,
.block#block-commons_core-group_create_content .inner .content{
	border: none;
	padding: 0;
	border-radius: 0px;
	-moz-border-radius: 0px;
  -webkit-border-radius: 0px;
}

.block#block-commons_core-group_create_content form {
  padding-top: 10px;
}
.block#block-commons_core-group_create_content select {
  font-size: 1.3em;
  background: transparent;
  width: 100%;
  padding: 0;
}

.block#block-commons_core-group_create_content input {
  font-size: 1.3em;
  margin: 5px 24px 0 0;
}


#edit-submit-group-tab-content {
  width: auto;
  font-size: 14px;
  color: #10354D;
  background-color: #A5D3FE;
  background-image: -webkit-gradient(linear, left top, left bottom, from(#A5D3FE), to(#7BC2F6));
  background-image: -webkit-linear-gradient(top, #A5D3FE, #7BC2F6);
  background-image: -moz-linear-gradient(top, #A5D3FE, #7BC2F6);
  background-image: -ms-linear-gradient(top, #A5D3FE, #7BC2F6);
  background-image: -o-linear-gradient(top, #A5D3FE, #7BC2F6);
  background-image: linear-gradient(top, #A5D3FE, #7BC2F6);
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

#block-views-group_tab_content-block_1 .view-content .item-list ul li {
  padding: 14px 0px 20px 0px;
}
.view-group-tab-content .views-field-title {
  font-size: 1.8em;
  margin-bottom: 12px;
}

.view-group-tab-content span.views-field-name, .view-group-tab-content .views-field-tid, .view-group-tab-content .views-field-created {
  font-size: 1.2em;
}

.view-group-tab-content .views-field-teaser {
  font-size: 1.4em;
}
.sidebar-last .block {
  font-size: 1.2em;
  font-weight: bold;
}

.sidebar-last .block-views .view-content .item-list ul li {
  border-bottom: 0 none;
  margin-bottom: 0;
  padding-bottom: 4px;
  padding-left: 10px;
  position: relative;
  clear: both;
}

.view-id-group_block_events_upcoming .item-list ul li, #block-views-group_tab_content-block_1 .item-list ul li, #block-views-groups_my_groups-block_1 .item-list ul li, #block-views-groups_most_active-block_1 .item-list ul li, #block-views-groups_newest_groups-block_1 ul li{
  background-image: none;
}

#block-views-deb9ea35a724682175e6d2c990e7009c .views-field-field-location-value {
  font-weight: normal;
}
#block-commons_core-group_create_content form .form-item {
	float: left;
	margin-top: 0px;
	height: 18px;
	margin-top: 3px;
	margin-right: 1%;
/* Again, (width) not inheriting from Roots correctly, but can't take the time to figure it out
 * -jay
 */
	width: 65%;
}

#block-commons_core-group_create_content form .form-item select {

}

/*My Groups list */

#view-id-subgroups_main_listing-page_1 .views-row .views-field-field-group-image-fid,
#view-id-groups_my_groups_listing-page_1 .views-row .views-field-field-group-image-fid {
	float: left;
}

#view-id-subgroups_main_listing-page_1 .views-row .views-field-description,
#view-id-groups_my_groups_listing-page_1 .views-row .views-field-description{

}

#view-id-subgroups_main_listing-page_1 .views-row .views-field-leave-group,
#view-id-groups_my_groups_listing-page_1 .views-row .views-field-leave-group {

}

#view-id-subgroups_main_listing-page_1 .views-row,
#view-id-groups_my_groups_listing-page_1 .views-row{
	border-bottom: 1px solid #eee;
	margin-bottom: 10px;
}

#view-id-subgroups_main_listing-page_1 .views-row.views-row-last,
#view-id-groups_my_groups_listing-page_1 .views-row.views-row-last {
	border: 0px;
	margin-bottom: 0px;
}

#view-id-subgroups_main_listing-page_1 .views-row:after,
#view-id-groups_my_groups_listing-page_1 .views-row:after{
clear: both;
content: ".";
display: block;
height: 0;
visibility: hidden;
}

/*featured groups slideshow*/

#block-views-groups_featured_groups-block_1 h2.block-title {
	margin-top: 0;
}

#block-views-groups_featured_groups-block_1 .content .views_slideshow_slide{
	width: 100%;
}
#block-views-groups_featured_groups-block_1 .content .views-row .views-field-field-group-image-fid{
 	width: 21%;
}
/* ... */

